Fix integration and functional tests failing